--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -408,7 +408,7 @@ mouse:
     #   - (Linux/BSD) xdg-open
     #   - (Windows) explorer
     launcher:
-      program: firefox
+      program: brave
     #  args: []
 
     # URL modifiers
