--- a/other/30-touchpad.conf
+++ b/other/30-touchpad.conf
@@ -1,7 +1,7 @@
 Section "InputClass"
-	Identifier "SynPS/2 Synaptics Touchpad"
+	Identifier "SynPS/2 Synaptics TouchPad"
 	Driver "libinput"
-	MatchProduct "SynPS/2 Synaptics Touchpad"
+	MatchProduct "SynPS/2 Synaptics TouchPad"
 	MatchIsTouchpad "on"
 	Option "AccelProfile" "flat"
 	Option "AccelSpeed" "0.5"
